# rust-game

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  docker_build.sh  dockerfile  index.js  package-lock.json  package.json  run.sh  run_docker_dev.sh  server_setup.sh
backend/: Cargo.toml  dockerfile
backend/src/: database.rs  main.rs  server_pool.rs
backend/src/canvas_game/: mod.rs
backend/src/game/: deck.rs
data/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/6234c09d26530e6410ee70eb04773eba/: meta.json  private_key.json  regr.json
data/nginx/: app.conf
front/: dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
front/src/: App.vue  env.d.ts  index.css  lib.ts  main.ts
front/src/components/: CanvasGame.vue  Flags.vue  Spinner.vue
front/src/config/: Config.ts  MainAppConfig.ts
front/src/core/: CameraControl.ts  ExplosionAudioManager.ts  HPBar.ts  IslandsManager.ts  LeaderBoards.ts  MiniMap.ts  Particles.ts  PlayerActions.ts  PlayerStuff.ts  RenderOrder.ts  RustWorldTypes.ts  ShipsManager.ts  Terrain.ts  TestSphere.ts  Water.ts  noiseMap.ts  render3d.ts
front/src/pages/: Game.vue  Home.vue  Ranking.vue  ServerSelector.vue  TextInput.vue
front/src/requests/: ServerRequests.ts
front/src/shaders/: water.frag.glsl  water.vert.glsl
front/src/utils/: hooks.ts  promiseUtils.ts  reactiveUtils.ts
game_state/: .gitignore  Cargo.toml  index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
game_state/assets/: flagnames.txt
game_state/js/: CameraControl.ts  HPBar.ts  IslandsManager.ts  LeaderBoards.ts  Linscale.ts  MiniMap.ts  Particles.ts  PlayerActions.ts  PlayerStuff.ts  RenderOrder.ts  RustWorldTypes.ts  ShipsManager.ts  Terrain.ts  TestSphere.ts  Water.ts  env.d.ts  index.ts  lib.ts  libInterface.ts  noiseMap.ts  render3d.ts  shaderUtils.ts
game_state/js/assets/: boat.glb  lighthouse.glb  shipuv.glb
game_state/js/config/: Config.ts
game_state/js/shaders/: explosion.frag.glsl  explosion.vert.glsl  water.frag.glsl  water.vert.glsl
game_state/src/: Boids.rs  boidlike.rs  boids.rs  bot_player.rs  bullet.rs  diffing.rs  game_map.rs  game_noise.rs  game_server.rs  hashgrid.rs  interpolation.rs  island.rs  lib.rs  main.rs  player.rs  player_state.rs  running_mode.rs  server_state.rs  ship.rs  sparse_matrix.rs  spiral_search.rs  wasm_game.rs  world_gen.rs  ws_channel.rs
game_state/src/server/: game_server.rs  local_client.rs  mod.rs  online_client.rs  running_mode.rs  ws_channel.rs
game_state/src/utils/: diffing.rs  event_hub.rs  interpolation.rs  marching_squares.rs  mod.rs  scheduling.rs  spiral_search.rs  system_things.rs  vectors.rs
src/: main.rs
src/canvas_game/: mod.rs
src/game/: game.rs  mod.rs
