[package]
edition = "2021"
name = "truco"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros", "ws"]}
fastrand = "2.1.0"
futures-util = "0.3.30"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
