[package]
edition = "2021"
name = "game"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros", "ws"]}
bincode = "1.3.3"
env_logger = "0.11.3"
fastrand = "2.1.0"
futures-util = "0.3.30"
game_state = {path = "../game_state"}
log = "0.4.22"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
tower-http = {version = "0.5.0", features = ["fs", "trace"]}
