[package]
edition = "2021"
name = "game_state"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
noise = {version = "0.9.0", features = ["images"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"

[alias]
wasm = "wasm-pack build --target web"

[lib]
crate-type = ["cdylib", "rlib"]
