[package]
edition = "2021"
name = "game_state"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
cgmath = "0.18.0"
fnv = "1.0.3"
noise = {version = "0.9.0", features = ["images"]}
pathfinding = "4.9.1"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.38.0", features = ["rt", "sync"]}
wasm-bindgen = "0.2.92"
web-sys = {version = "0.3.69", features = ["console"]}

[alias]
wasm = "wasm-pack build --target web"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
# rust-flags = "-C target-feature=+simd128"
wasm-opt = ['-O4', '-g']
